Fix font being too large

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 #InfoText {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
-    font-size: 15px;
+    font-size: 13px;
     color: #ffffff;
     text-align: center;
     line-height: 115%;
